--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "spi_freq" : 4000,
-
+  "hispeed" : false,
 
   "post_read_setup_cycles" : 4,
   "step_write_setup_cycles" : 4,
@@ -14,13 +14,15 @@
   "ignore_failures" : 1,
   "di_init_mask" : 281474976710655,
 
-  "set_first" : "CHANGEME",
+  "set_first" : 1,
 
-  "pw_rst_cycle" : 15,
+  "pw_rst_cycle_exp" : 0,
+  "pw_rst_cycle_mantissa" : 15,
   "wl_dac_rst_lvl_cycle" : 0,
   "sl_dac_rst_lvl_cycle" : 0,
 
-  "pw_set_cycle" : 15,
+  "pw_set_cycle_exp" : 0,
+  "pw_set_cycle_mantissa" : 15,
   "wl_dac_set_lvl_cycle" : 0,
   "bl_dac_set_lvl_cycle" : 0,
 
@@ -30,9 +32,9 @@
 
 
   "level_settings" : [
-    {"loop_order_rst": 0, "pw_rst_step": 0, "pw_rst_stop": 0, "pw_rst_start": 0, "wl_dac_rst_lvl_step": 0, "wl_dac_rst_lvl_stop": 0, "wl_dac_rst_lvl_start": 0, "sl_dac_rst_lvl_step": 0, "sl_dac_rst_lvl_stop": 0, "sl_dac_rst_lvl_start": 0, "loop_order_set": 0, "pw_set_step": 0, "pw_set_stop": 0, "pw_set_start": 0, "wl_dac_set_lvl_step": 0, "wl_dac_set_lvl_stop": 0, "wl_dac_set_lvl_start": 0, "bl_dac_set_lvl_step": 0, "bl_dac_set_lvl_stop": 0, "bl_dac_set_lvl_start": 0, "adc_upper_write_ref_lvl": 0, "adc_lower_write_ref_lvl": 0, "adc_upper_read_ref_lvl": 0, "adc_read_dac_lvl": 0, "adc_clamp_ref_lvl": 0},
-    {"loop_order_rst": 0, "pw_rst_step": 0, "pw_rst_stop": 0, "pw_rst_start": 0, "wl_dac_rst_lvl_step": 0, "wl_dac_rst_lvl_stop": 0, "wl_dac_rst_lvl_start": 0, "sl_dac_rst_lvl_step": 0, "sl_dac_rst_lvl_stop": 0, "sl_dac_rst_lvl_start": 0, "loop_order_set": 0, "pw_set_step": 0, "pw_set_stop": 0, "pw_set_start": 0, "wl_dac_set_lvl_step": 0, "wl_dac_set_lvl_stop": 0, "wl_dac_set_lvl_start": 0, "bl_dac_set_lvl_step": 0, "bl_dac_set_lvl_stop": 0, "bl_dac_set_lvl_start": 0, "adc_upper_write_ref_lvl": 0, "adc_lower_write_ref_lvl": 0, "adc_upper_read_ref_lvl": 0, "adc_read_dac_lvl": 0, "adc_clamp_ref_lvl": 0},
-    {"loop_order_rst": 0, "pw_rst_step": 0, "pw_rst_stop": 0, "pw_rst_start": 0, "wl_dac_rst_lvl_step": 0, "wl_dac_rst_lvl_stop": 0, "wl_dac_rst_lvl_start": 0, "sl_dac_rst_lvl_step": 0, "sl_dac_rst_lvl_stop": 0, "sl_dac_rst_lvl_start": 0, "loop_order_set": 0, "pw_set_step": 0, "pw_set_stop": 0, "pw_set_start": 0, "wl_dac_set_lvl_step": 0, "wl_dac_set_lvl_stop": 0, "wl_dac_set_lvl_start": 0, "bl_dac_set_lvl_step": 0, "bl_dac_set_lvl_stop": 0, "bl_dac_set_lvl_start": 0, "adc_upper_write_ref_lvl": 0, "adc_lower_write_ref_lvl": 0, "adc_upper_read_ref_lvl": 0, "adc_read_dac_lvl": 0, "adc_clamp_ref_lvl": 0},
-    {"loop_order_rst": 0, "pw_rst_step": 0, "pw_rst_stop": 0, "pw_rst_start": 0, "wl_dac_rst_lvl_step": 0, "wl_dac_rst_lvl_stop": 0, "wl_dac_rst_lvl_start": 0, "sl_dac_rst_lvl_step": 0, "sl_dac_rst_lvl_stop": 0, "sl_dac_rst_lvl_start": 0, "loop_order_set": 0, "pw_set_step": 0, "pw_set_stop": 0, "pw_set_start": 0, "wl_dac_set_lvl_step": 0, "wl_dac_set_lvl_stop": 0, "wl_dac_set_lvl_start": 0, "bl_dac_set_lvl_step": 0, "bl_dac_set_lvl_stop": 0, "bl_dac_set_lvl_start": 0, "adc_upper_write_ref_lvl": 0, "adc_lower_write_ref_lvl": 0, "adc_upper_read_ref_lvl": 0, "adc_read_dac_lvl": 0, "adc_clamp_ref_lvl": 0}
+    {"loop_order_rst": 0, "pw_rst_step_exp": 0, "pw_rst_step_mantissa": 15, "pw_rst_stop_exp": 0, "pw_rst_stop_mantissa": 15, "pw_rst_start_exp": 0, "pw_rst_start_mantissa": 15, "wl_dac_rst_lvl_step": 0, "wl_dac_rst_lvl_stop": 0, "wl_dac_rst_lvl_start": 0, "sl_dac_rst_lvl_step": 0, "sl_dac_rst_lvl_stop": 0, "sl_dac_rst_lvl_start": 0, "loop_order_set": 0, "pw_set_step_exp": 0, "pw_set_step_mantissa": 15, "pw_set_stop_exp": 0, "pw_set_stop_mantissa": 15, "pw_set_start_exp": 0, "pw_set_start_mantissa": 15, "wl_dac_set_lvl_step": 0, "wl_dac_set_lvl_stop": 0, "wl_dac_set_lvl_start": 0, "bl_dac_set_lvl_step": 0, "bl_dac_set_lvl_stop": 0, "bl_dac_set_lvl_start": 0, "adc_upper_write_ref_lvl": 0, "adc_lower_write_ref_lvl": 0, "adc_upper_read_ref_lvl": 0, "adc_read_dac_lvl": 0, "adc_clamp_ref_lvl": 0},
+    {"loop_order_rst": 0, "pw_rst_step_exp": 0, "pw_rst_step_mantissa": 15, "pw_rst_stop_exp": 0, "pw_rst_stop_mantissa": 15, "pw_rst_start_exp": 0, "pw_rst_start_mantissa": 15, "wl_dac_rst_lvl_step": 0, "wl_dac_rst_lvl_stop": 0, "wl_dac_rst_lvl_start": 0, "sl_dac_rst_lvl_step": 0, "sl_dac_rst_lvl_stop": 0, "sl_dac_rst_lvl_start": 0, "loop_order_set": 0, "pw_set_step_exp": 0, "pw_set_step_mantissa": 15, "pw_set_stop_exp": 0, "pw_set_stop_mantissa": 15, "pw_set_start_exp": 0, "pw_set_start_mantissa": 15, "wl_dac_set_lvl_step": 0, "wl_dac_set_lvl_stop": 0, "wl_dac_set_lvl_start": 0, "bl_dac_set_lvl_step": 0, "bl_dac_set_lvl_stop": 0, "bl_dac_set_lvl_start": 0, "adc_upper_write_ref_lvl": 0, "adc_lower_write_ref_lvl": 0, "adc_upper_read_ref_lvl": 0, "adc_read_dac_lvl": 0, "adc_clamp_ref_lvl": 0},
+    {"loop_order_rst": 0, "pw_rst_step_exp": 0, "pw_rst_step_mantissa": 15, "pw_rst_stop_exp": 0, "pw_rst_stop_mantissa": 15, "pw_rst_start_exp": 0, "pw_rst_start_mantissa": 15, "wl_dac_rst_lvl_step": 0, "wl_dac_rst_lvl_stop": 0, "wl_dac_rst_lvl_start": 0, "sl_dac_rst_lvl_step": 0, "sl_dac_rst_lvl_stop": 0, "sl_dac_rst_lvl_start": 0, "loop_order_set": 0, "pw_set_step_exp": 0, "pw_set_step_mantissa": 15, "pw_set_stop_exp": 0, "pw_set_stop_mantissa": 15, "pw_set_start_exp": 0, "pw_set_start_mantissa": 15, "wl_dac_set_lvl_step": 0, "wl_dac_set_lvl_stop": 0, "wl_dac_set_lvl_start": 0, "bl_dac_set_lvl_step": 0, "bl_dac_set_lvl_stop": 0, "bl_dac_set_lvl_start": 0, "adc_upper_write_ref_lvl": 0, "adc_lower_write_ref_lvl": 0, "adc_upper_read_ref_lvl": 0, "adc_read_dac_lvl": 0, "adc_clamp_ref_lvl": 0},
+    {"loop_order_rst": 0, "pw_rst_step_exp": 0, "pw_rst_step_mantissa": 15, "pw_rst_stop_exp": 0, "pw_rst_stop_mantissa": 15, "pw_rst_start_exp": 0, "pw_rst_start_mantissa": 15, "wl_dac_rst_lvl_step": 0, "wl_dac_rst_lvl_stop": 0, "wl_dac_rst_lvl_start": 0, "sl_dac_rst_lvl_step": 0, "sl_dac_rst_lvl_stop": 0, "sl_dac_rst_lvl_start": 0, "loop_order_set": 0, "pw_set_step_exp": 0, "pw_set_step_mantissa": 15, "pw_set_stop_exp": 0, "pw_set_stop_mantissa": 15, "pw_set_start_exp": 0, "pw_set_start_mantissa": 15, "wl_dac_set_lvl_step": 0, "wl_dac_set_lvl_stop": 0, "wl_dac_set_lvl_start": 0, "bl_dac_set_lvl_step": 0, "bl_dac_set_lvl_stop": 0, "bl_dac_set_lvl_start": 0, "adc_upper_write_ref_lvl": 0, "adc_lower_write_ref_lvl": 0, "adc_upper_read_ref_lvl": 0, "adc_read_dac_lvl": 0, "adc_clamp_ref_lvl": 0}
   ]
 }
