Add FTDI driver support & update characterizations

--- a/settings/config.json
+++ b/settings/config.json
@@ -2,6 +2,7 @@
   "master_log_file": "log/master.log",
   "prog_log_file": "log/prog.log",
 
+  "spi_mode" : "ftdi",
   "spi_freq" : 4000,
   "hispeed" : false,
 
